# micrograd

./: .gitignore  .gitpod.yml  pyproject.toml
