[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = ""
authors = ["Nicolay Nerdal <nicolay.nerdal@smn.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
